ingress_validation/ingress-echo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  labels:
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/part-of: container-application-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver
    spec:
      containers:
        - name: ingress-echo
          image: ealen/echo-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
