ingress_validation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: challenge
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: container-application-challenge
spec:
  tls:
    - hosts:
        - challenge.test
      secretName: challenge-test-tls

  defaultBackend:
    service:
      name: api
      port:
        number: 8080
  
  rules:
    - host: challenge.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port: 
                  number: 8080
          #####
          # for testing purposes only
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: echoserver
          #       port: 
          #         number: 8080
          #####
